@@ -1,6 +1,6 @@
 /*
  * HeadsUp Agile
- * Copyright 2009-2012 Heads Up Development Ltd.
+ * Copyright 2009-2013 Heads Up Development Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -29,6 +29,7 @@ public interface XCodeProject
     extends Project
 {
     public static final String XCODE_PLATFORM_MACOSX = "Mac OSX";
+    public static final String XCODE_PLATFORM_IOS = "iOS";
 
     String getVersion();
 
