@@ -2,7 +2,8 @@
 
 * Remove the unnecessary "begin" issue page - just use progress instead
 
-* Fix bug where progressing an issue can appear to alter the time remaining incorrectly
+* Fix issue:64 where progressing an issue can appear to alter the time remaining incorrectly
+* Fix issue:62 - don't reset the platform in an xcode project unless the info file is being parsed
 
 2.0-rc1
 
